Fixed compiling problem

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,13 @@
 CC=gcc
-CFLAGS=
+CFLAGS=-pthread
 FMT=indent
 
-mysh: shell.c interpreter.c shellmemory.c
-	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c
-	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o
+mysh: shell.c interpreter.c shellmemory.c scheduler.c pcb.c readyqueue.c
+	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c scheduler.c pcb.c readyqueue.c
+	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o scheduler.o pcb.o readyqueue.o
 
-style: shell.c shell.h interpreter.c interpreter.h shellmemory.c shellmemory.h
+style: shell.c shell.h interpreter.c interpreter.h shellmemory.c shellmemory.h scheduler.c scheduler.h pcb.c pcb.h readyqueue.c readyqueue.h
 	$(FMT) $?
 
-clean: 
+clean:
 	$(RM) mysh; $(RM) *.o; $(RM) *~
-
